Added MongoDB Connector dependency

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>rnd</groupId>
-	<artifactId>ml-starter</artifactId>
+	<artifactId>ml-bigdata-starter</artifactId>
 	<version>1.0.0</version>
 
 	<properties>
@@ -22,6 +22,12 @@
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-mllib_2.11</artifactId>
 			<version>2.0.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mongodb.spark</groupId>
+			<artifactId>mongo-spark-connector_2.11</artifactId>
+			<version>2.2.1</version>
 		</dependency>
 
 	</dependencies>
